Add logging file, vars update, jinja file for poppy conf file

--- a/provision/setup/vars/main.yml
+++ b/provision/setup/vars/main.yml
@@ -2,3 +2,10 @@ policy_client_secret: '<YOUR_CLIENT_SECRET>'
 policy_base_url: '<AKAMAI_CPS_BASE_URL>'
 policy_access_token: '<YOUR_ACCESS_TOKEN>'
 policy_client_token: '<YOUR_CLIENT_TOKEN>'
+ak_http_conf: '<AKAMAI_HTTP_CONFIG_NO>'
+ak_https_conf: '<AKAMAI_HTTPS_CONFIG_NO>'
+contract_id: '<CONTRACT_ID>'
+group_id: '<GROUP_ID>'
+rackspace_api_key: '<RACKSPACE_API_KEY>'
+email_id: '<YOUR_EMAIL_ID>'
+mailgun_api_key: '<MAILGUN_API_KEY>'
